--- a/webapp/view/PurchaseOrder.view.xml
+++ b/webapp/view/PurchaseOrder.view.xml
@@ -10,7 +10,7 @@
             <f:title>
                 <f:DynamicPageTitle id="_IDGenDynamicPageTitle1">
                     <f:navigationActions>
-                        <Button id="_IDGenButton4" text="Next" type="Success" icon="sap-icon://open-command-field" press="onNavNext"/>
+                        <Button id="_IDGenButton4" text="Next" type="Success" icon="sap-icon://open-command-field" press="onNavNext" class="sapUiSmallMarginEnd"/>
                     </f:navigationActions>
                     <f:heading>
                         <Title id="_IDGenTitle4" text="{RoutePoData>/PoHeader/PurchaseOrder}" level="H1"/>
