--- a/webapp/view/CancelAsn.view.xml
+++ b/webapp/view/CancelAsn.view.xml
@@ -29,7 +29,7 @@
                 </fb:FilterGroupItem>
                 <fb:FilterGroupItem name="invoiceDate" label="Invoice Date" groupName="Group1" visibleInFilterBar="true">
                     <fb:control>
-                        <DateRangeSelection id="idprintPurchDate" class="DRS1" displayFormat="yyyy-MM-dd" change="handleChange"/>
+                        <DateRangeSelection id="idprintPurchDate" class="DRS1" displayFormat="dd-MM-yyyy" change="handleChange"/>
                     </fb:control>
                 </fb:FilterGroupItem>
             </fb:filterGroupItems>
