--- a/webapp/view/SchedulingAgreement.view.xml
+++ b/webapp/view/SchedulingAgreement.view.xml
@@ -60,7 +60,7 @@
                 <!-- Purchase Order Date -->
                 <fb:FilterGroupItem id="_IDGenFilterGroupItem10"  name="CreationDate" label="Creation Date" groupName="Group1" visibleInFilterBar="true">
                     <fb:control>
-                        <DateRangeSelection id="idPoPurchDate" class="DRS1" displayFormat="yyyy-MM-dd" change="handleChange"/>
+                        <DateRangeSelection id="idPoPurchDate" class="DRS1" displayFormat="dd-MM-yyyy" change="handleChange"/>
                     </fb:control>
                 </fb:FilterGroupItem>
             </fb:filterGroupItems>
