--- a/webapp/view/AsnSaCreation.view.xml
+++ b/webapp/view/AsnSaCreation.view.xml
@@ -64,7 +64,7 @@
 
                         <VBox id="_IDGenVBox30" width="20%">
                             <Label id="_IDGenLabel39" text="Invoice Date" required="true"/>
-                            <DatePicker id="idRAPO_InvDate" width="75%" placeholder="Select Date" displayFormat="yyyy-MM-dd" enabled="true" class="sapUiSmallMarginBottom"/>
+                            <DatePicker id="idRAPO_InvDate" width="75%" placeholder="Select Date" displayFormat="dd-MM-yyyy" enabled="true" class="sapUiSmallMarginBottom"/>
                         </VBox>
                         <VBox id="_IDGenVBox31" width="20%">
                             <Label id="_IDGenLabel40" text="Vehical Number" required="true"/>
@@ -80,7 +80,7 @@
                         </VBox>
                         <VBox id="_IDGenVBox34" width="20%">
                             <Label id="_IDGenLabel43" text="Eway Bill Date"/>
-                            <DatePicker id="idRAPO_EWAY_Date" width="75%" placeholder="Select Date" change="handleChange_RAPO_EWAYDate" displayFormat="yyyy-MM-dd" enabled="true" class="sapUiSmallMarginBottom"/>
+                            <DatePicker id="idRAPO_EWAY_Date" width="75%" placeholder="Select Date" change="handleChange_RAPO_EWAYDate" displayFormat="dd-MM-yyyy" enabled="true" class="sapUiSmallMarginBottom"/>
                         </VBox>
                     </HBox>
 
@@ -96,7 +96,7 @@
                         </VBox>
                         <VBox id="_IDGenVBox36" width="20%">
                             <Label id="_IDGenLabel45" text="LR Date"/>
-                            <DatePicker id="idRAPO_LR_Date" width="75%" placeholder="Select Date" change="handleChange_RAPO_LRDate" displayFormat="yyyy-MM-dd" enabled="true" class="sapUiSmallMarginBottom"/>
+                            <DatePicker id="idRAPO_LR_Date" width="75%" placeholder="Select Date" change="handleChange_RAPO_LRDate" displayFormat="dd-MM-yyyy" enabled="true" class="sapUiSmallMarginBottom"/>
                         </VBox>
                         <VBox id="_IDGenVBox112" width="20%" visible="false">
                             <Label id="_IDGenLabel112" text="Supplier"/>
