added venedor name

--- a/webapp/view/AsnCreation.view.xml
+++ b/webapp/view/AsnCreation.view.xml
@@ -94,6 +94,10 @@
                             <Label id="_IDGenLabel111" text="Supplier"/>
                             <Text id="idSupplier" text="{RoutePoData>/PoHeader/Supplier}" class="sapUiSmallMarginBottom"/>
                         </VBox>
+                        <VBox id="_IDGenVBox1122" width="20%" visible="false">
+                            <Label id="_IDGenLabel1122" text="Supplier"/>
+                            <Text id="idSupplierName" text="{RoutePoData>/PoHeader/SupplierName}" class="sapUiSmallMarginBottom"/>
+                        </VBox>
                     </HBox>
 
                 </f:content>
