--- a/webapp/view/ScheduleAgreeOrder.view.xml
+++ b/webapp/view/ScheduleAgreeOrder.view.xml
@@ -6,7 +6,7 @@
     xmlns:f="sap.f"
     xmlns:svm="sap.ui.comp.smartvariants">
     <!-- <Page id="ScheduleAgreeOrderpage" title="Vendor Portal" showFooter="true" titleAlignment="Auto" showNavButton="true" navButtonPress="onNavBack"> -->
-        <f:DynamicPage id="_IDGenDynamicPage1" headerExpanded="{/headerExpanded}">
+        <f:DynamicPage id="_IDGenDynamicPage1" class="sapUiNoContentPadding" headerExpanded="{/headerExpanded}">
             <f:title>
                 <f:DynamicPageTitle id="_IDGenDynamicPageTitle">
                     <f:navigationActions>
