--- a/webapp/view/AsnSaCreation.view.xml
+++ b/webapp/view/AsnSaCreation.view.xml
@@ -13,7 +13,7 @@
     xmlns:upload="sap.m.upload"
     xmlns:mdcat="sap.ui.mdc.actiontoolbar">
     <!-- <Page id="asnsaCreationpage" title="{i18n>title}" showFooter="true" titleAlignment="Auto" showNavButton="true" navButtonPress="onNavBack"> -->
-    <f:DynamicPage id="_IDGenDynamicPage" headerExpanded="{/headerExpanded}" showFooter="true" fitContent="true">
+    <f:DynamicPage id="_IDGenDynamicPage" class="sapUiNoContentPadding" headerExpanded="{/headerExpanded}" showFooter="true" fitContent="true">
         <f:title>
             <f:DynamicPageTitle id="_IDGenDynamicPageTitle3">
                 <f:actions>
