--- a/webapp/view/AsnSaCreation.view.xml
+++ b/webapp/view/AsnSaCreation.view.xml
@@ -181,7 +181,7 @@
                                 <Button id="btnDelete" text="Delete" enabled="false" visible="false" press="onDelete"/>
                             </Toolbar>
 
-                            <Table id="fileTable" mode="SingleSelectLeft" items="{pendingFiles>/}" selectionChange="onFileSelect">
+                            <Table id="fileTable" mode="None" items="{pendingFiles>/}" selectionChange="onFileSelect">
                                 <columns>
                                     <Column>
                                         <Text text="File Name"/>
